# pycalphad

./: install-development-version.sh  install_development_version.sh  install_development_version_ubuntu.sh  install_development_version_windows.sh  list-of-tags.txt  pyproject.toml  requirements-dev.txt  requirements-wsl.txt  set_proxy_wsl.sh
.github/workflows/: deploy.yaml  docs.yaml  test.yaml
examples/: BinaryExamples.ipynb  Fe-C-example.ipynb  Fe-O-example.ipynb  FeC-23Jac.tdb  FeO-23Jia.tdb
pycalphad/io/: grammar.py  tdb.py
pycalphad/mapping/strategy/: binary_strategy.py  ternary_strategy.py
pycalphad/property_framework/: units.py
pycalphad/tests/: test_mapping_strategy.py
pycalphad/tests/databases/: AuSn-13Don.tdb
