[project]
# version = "0.0.1"  # Remove any existing version parameter.
dynamic = ["version"]
name = "pycalphad"
description = "Python package for CALPHAD calculations"
readme = "README.md"

[build-system]
requires = [
    "Cython",
    "numpy>=2",
    "scipy",
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "solver: mark for tests that verify the correctness of the solver",
]
norecursedirs = ["pycalphad/_dev"]
filterwarnings = [
    "error",
    "ignore:The type definition character*:UserWarning",
]
addopts = """
--cov-report html:pycalphad/tests/reports/coverage-html
"""

[tool.coverage.paths]
# The first path is the path to the modules to report coverage against.
# All following paths are patterns to match against the collected data.
# Any matches will be combined with the first path for coverage.
source = [
    "./pycalphad",
    "*/lib/*/site-packages/pycalphad",  # allows testing against site-packages for a local virtual environment
]

[tool.coverage.run]
plugins = [
    "Cython.Coverage",
]
# Only consider coverage for these packages:
source_pkgs = [
    "pycalphad"
]
omit = [
    "pycalphad/core/*.pxd", # workaround for https://github.com/nedbat/coveragepy/issues/972
    "stringsource",
    "*/numpy/*",  # fix for Cython.Coverage.Plugin did not provide a file reporter for numpy/__init__.cython-30.pxd
]

[tool.coverage.report]
ignore_errors = true # workaround for https://github.com/cython/cython/issues/5581

[tool.mutmut]
paths_to_mutate = [ "pycalphad/models" ]
tests_dir = [ "pycalphad/tests" ]
debug = true
also_copy=[
    "pycalphad",
    "pycalphad/tests",
    "setup.py",
    "README.rst",
    "LICENSE.txt"
]

# '[tool.setuptools.scm]\n' needs to be the last line because
# we do an append operation in the deploy.yaml GitHub Actions workflow
[tool.setuptools_scm]